chore: Add .vercelignore and clean sensitive files
- Created .vercelignore to exclude unnecessary files from deployment
- Updated .gitignore to prevent scraped-data and PDFs
- Removed scraped-data/ from repository
- Excluded scripts/, supabase/, and docs/ from Vercel build
- Keeps codebase clean and reduces deployment size

--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,10 @@ yarn-debug.log*
 yarn-error.log*
 .pnpm-debug.log*
 
+# scraped data and sensitive files
+scraped-data/
+*.pdf
+
 # env files (can opt-in for committing if needed)
 .env
 .env.local
