--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
 # Supabase Configuration
-# Get these values from: https://supabase.com/dashboard/project/akcuvlanpqpoizconuhm/settings/api
+# Get these values from: https://supabase.com/dashboard/project/YOUR_PROJECT_ID/settings/api
 
 # Public URL - Safe to expose to the browser
-NEXT_PUBLIC_SUPABASE_URL=https://akcuvlanpqpoizconuhm.supabase.co
+NEXT_PUBLIC_SUPABASE_URL=https://YOUR_PROJECT_ID.supabase.co
 
 # Anon/Public Key - Safe to expose to the browser
 NEXT_PUBLIC_SUPABASE_ANON_KEY=your_anon_key_here
