chore: Remove development files from repository
- Remove SQL files from root (moved to /supabase/ folder)
  - apply-db-optimizations.sql
  - supabase-schema.sql (old)
  - supabase-schema-improvements.sql (old)
  - update-racial-traits-schema.sql (one-off)

- Remove duplicate/unnecessary config files
  - .env.local.example (duplicate of .env.example)
  - .gitignore.recommended (already applied)
  - .vercelignore (Vercel uses .gitignore by default)

- Update .gitignore
  - Add tsconfig.tsbuildinfo to ignore list
  - Clean up TypeScript section

Impact: -62 KB of unnecessary files
Files remain locally but won't be tracked

--- a/.gitignore
+++ b/.gitignore
@@ -50,7 +50,8 @@ scraped-data/
 
 # typescript
 *.tsbuildinfo
-next-env.d.ts
+tsconfig.tsbuildinfo
+# Keep next-env.d.ts (required by Next.js)
 
 # ============================================================================
 # RECOMMENDED ADDITIONS
